Some more changes
probably final

--- a/notebooks/notebookfinal.ipynb
+++ b/notebooks/notebookfinal.ipynb
@@ -324,6 +324,33 @@
     "RNA.svg_rna_plot(sequence, structure=ss, ssfile=fp.name)\n",
     "SVG(fp.name)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare the various methods of finding the consensus structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tests.compare import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aligned_sequences=test_sequences[\"tRNA_7.stk\"]\n",
+    "sim_matrix = similarity_matrix(aligned_sequences)\n",
+    "plot_similarity_matrix(sim_matrix, method_names)"
+   ]
   }
  ],
  "metadata": {
